os_manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: openmole
  labels:
    name: openmole
---
apiVersion: v1
kind: Pod
metadata:
  name: openmole-connect
  namespace: openmole
  labels:
    app.kubernetes.io/name: openmole-connect
spec:
  containers:
  - name: openmole-connect
    image: openmole/openmole-connect:1.0-SNAPSHOT
    imagePullPolicy: "Always"
    args:
      - --config-file
      - "/etc/connect-config/config.yml"
    ports:
      - containerPort: 8080
    volumeMounts:
      - name: connect-config
        mountPath: "/etc/connect-config"
        readOnly: true
      - mountPath: "/home/demiourgos728"
        name: connect-pv-storage
  securityContext:
    fsGroup: 1001
  volumes:
    - name: connect-config
      configMap:
        name: connect-config
    - name: connect-pv-storage
      persistentVolumeClaim:
        claimName: connect-pv-claim
  serviceAccountName: openmole-admin-sa
---
apiVersion: v1
kind: Service
metadata:
  name: openmole-connect-service
  namespace: openmole
spec:
  selector:
    app.kubernetes.io/name: openmole-connect
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openmole-connect-ingress
  namespace: openmole
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: openmole-connect-service
      port:
        number: 8080
#    - host: online.openmole.org
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: openmole-connect-service
#                port:
#                  number: 8080
